apps/wallabag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /var/www/wallabag/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wallabag-data
