apps/wallabag/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - wallabag.k8s-demo.de
    secretName: wallabag-tls
  rules:
  - host: wallabag.k8s-demo.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallabag
            port:
              number: 80
